After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 655581 - Epiphany proxy ignore-lists wildcards
Epiphany proxy ignore-lists wildcards
Status: RESOLVED FIXED
Product: glib
Classification: Platform
Component: network
2.29.x
Other Linux
: Normal normal
: ---
Assigned To: gtkdev
gtkdev
Depends on:
Blocks:
 
 
Reported: 2011-07-29 13:45 UTC by Berend De Schouwer
Modified: 2011-09-22 12:54 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Berend De Schouwer 2011-07-29 13:45:25 UTC
Epiphany 3.0.4 shows this bug; although I'm pretty sure earlier 3.0.x worked.  A recent update broke it.

(I guess webkit-backend.  not really sure)

Epiphany supports proxies, and supports setting an exclusing list using ignore-lists (org.gnome.system.proxy ignore-hosts)

This no longer works with wildcards.  eg. ['example.domain.com'] works, but neither ['.example.com'] nor ['*.example.com'] work.

"works" => skips proxy.
Comment 1 Berend De Schouwer 2011-08-12 11:19:21 UTC
It looks like someone at work had fun with an extra transparent proxy, which may have caused this trouble.  I'm confirming.
Comment 2 Dan Winship 2011-08-12 13:27:17 UTC
This is actually GProxyResolverGnome's fault
Comment 3 Dan Winship 2011-09-22 12:54:59 UTC
fixed in git master. This will not be fixed in glib-networking 2.30.0,
but should be in 2.30.1