proxy/gnome: Fix up multiple ignore_hosts bugs, and add a test

- ignore_hosts names are treated as suffixes/patterns, not
  exact matches

- ignore_hosts names/IPs can specify ports

- IPv6 literals now work in ignore_hosts (they were supposed to work
  before, but there was a parsing bug).

- IP/length patterns now work in all cases

https://bugzilla.gnome.org/show_bug.cgi?id=655581